spelling door co-pilot

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ Waarom koos je voor de opleiding? Waarom ben je een goede designer/programmeur? 
 Wees creatief! -->
 
                     <p class="about-text">
-                        Ik ben een creatief persoon met boordevolle ideeën en een sterke oog op detail en esthetiek.
+                        Ik ben een creatief persoon met boordevolle ideeën en een sterk oog op detail en esthetiek.
                         Vanwege mij middelbare school ervaring in Decor etalage en publiciteit, heb ik een solide basis
                         van al <strong>5 jaar in illustrator en indesign.</strong>
                         verder nog leer ik ook nieuwe programma's zoals figma en programmeertalen zoals <strong>HTML,
@@ -122,9 +122,9 @@ Wees creatief! -->
                             <p class="project-description">
                                 "Gumbo" zoals ik de jaguar noem was mijn eindwerk voor etalage en wat een werk het was.
                                 onze opdracht moest een "chique"
-                                etalage zijn met de kleuren: Zwart,goud, zilver ezv. In het verleden heb ik al een werk
-                                gemaakt ivb met een parfumflesje.
-                                Gumbo bestaat uit 5000 handgeplaatste steentjes Ik heb hier 252uur aan gewerkt.
+                                etalage zijn met de kleuren: Zwart, goud, zilver enz. In het verleden heb ik al een werk
+                                gemaakt i.v.m. met een parfumflesje.
+                                Gumbo bestaat uit 5000 handgeplaatste steentjes Ik heb hier 252 uur aan gewerkt.
                             </p>
                             <a href="#" class="btn btn-sm btn-outline-primary toggle-description">Meer Info</a>
                         </div>
@@ -142,7 +142,7 @@ Wees creatief! -->
                                 Ik stak de tijd meestal in het ontwerpen voor nieuwe karakters voor mijn indie animatie
                                 serie.
                                 Menno is mijn meest populairste karakter met nu al zijn eigen fanbase. (karakter
-                                getoond op foto). Het is altijd mijn droom geweest om films te maken en andere te insireren met mijn creaties. Net als hoe films dat voor mij deden.
+                                getoond op foto). Het is altijd mijn droom geweest om films te maken en andere te inspireren met mijn creaties. Net als hoe films dat voor mij deden.
 
                             </p>
                             <a href="#" class="btn btn-sm btn-outline-primary toggle-description">Meer Info</a>
@@ -193,7 +193,7 @@ Wees creatief! -->
                         <div class="project-content">
                             <h3 class="project-title">Stad Hasselt</h3>
                             <p class="project-description">
-                                Stage lopen is altijd spanned.
+                                Stage lopen is altijd spannend.
                                 gelukkig verwelkomde Stad Hasselt mij met open armen. Ik heb er veel geleerd over teamwork en communicatie.
                                 Ik heb er ook mijn grafische vaardigheden kunnen verbeteren door te werken aan diverse projecten zoals flyers en media
                             </p>
@@ -252,7 +252,7 @@ Wees creatief! -->
                         <div class="fact-icon">( ˶ˆᗜˆ˵)</div>
                         <h3 class="fact-title">HTTYD </h3>
                         <p class="fact-description">
-                            inds ik 6 was ben ik al een grote fan van How to train your dragon, ik heb nu al 300+ aan
+                            Sinds ik 6 was ben ik al een grote fan van How to train your dragon, ik heb nu al 300+ aan
                             merch.
                         </p>
                     </div>
