--- a/meer.html
+++ b/meer.html
@@ -38,8 +38,8 @@
                 opdracht voor (voorontwerp, ontwerp en realisatie) en houdt hierbij rekening met de
                 specificaties, de methodiek, planning uit de analyse -->
                 <p><strong>OLR 1:</strong></p>
-                <p>Persoonlijk begin ik altijd met een paar voorschetsen om te zien of alles in orden valt met mijn idee, <br>
-                    als dit eventueel voor een klant is zorg ik ervoor dat deze getoont worden en neem notas voor aanpassingen die eventueel nodig zijn.</p>
+                <p>Persoonlijk begin ik altijd met een paar voorschetsen om te zien of alles in orde valt met mijn idee, <br>
+                    als dit eventueel voor een klant is zorg ik ervoor dat deze getoond worden en neem notities voor aanpassingen die eventueel nodig zijn.</p>
 
                 <!-- ORL2:De gegradueerde realiseert binnen het eigen aandeel van de opdracht creatieve en visueel
                 aantrekkelijke ontwerpen voor assets en gebruiksvriendelijke, geanimeerde interfaces gericht
@@ -51,7 +51,7 @@
                 bestaande digitale assets en gebruikt professionele software om het gepaste bestandsformaat
                 te realiseren-->
                 <p><strong>OLR 3:</strong></p>
-                <p>Als ontwerper is het altijd handig om professionele programmas te hebben,
+                <p>Als ontwerper is het altijd handig om professionele programma's te hebben,
                     eventueel iets niet lukt zoek ik op het internet <br>
                     voor andere methodes hoe ik het uiteindelijk wel zou kunnen toepassen.</p>
 
@@ -126,7 +126,7 @@
                 <!--OLR 12:De gegradueerde ontwikkelt en onderhoudt het eigen deskundigheidsniveau door relevante
                 duurzame evoluties in de sector actief op te volgen en verbetert continu de eigen praktijk.-->
                 <p><strong>OLR 12:</strong></p>
-                <p>In mijn vrije tijd kijk ik naar video van dingen die interessant zijn en ontworpen zijn door de programmas die ik gebruik om mij zo te kunnen inspireren.</p>
+                <p>In mijn vrije tijd kijk ik naar video van dingen die interessant zijn en ontworpen zijn door de programma's die ik gebruik om mij zo te kunnen inspireren.</p>
             </div>
         </div>
 
